fix(hero): update template styles (#325)
* fix(hero): center align in small viewports

* fix(hero-side-layout): remove extra margin on small viewports

* fix(hero-side-layout): update padding on small viewports

* fix(hero-infobox-desktop): remove extra py

* fix(hero-side-layout): remove old negative margin

* fix(hero-side-layout): update default value

* feat(styles): add new styles

* feat(hero-infobox): separate mobile and desktop variant

* fix(hero-dropdown): remove extra margin

* fix(hero-css): remove

* refactor(hero-layout): add dedicatd layouts

* refactor(hero): use new layouts

* refactor(breakpoints): use breakpoints for container max w

* fix(hero): prevent overflow

* feat(hero): add styling for bg and text

* feat(hero): auto chnage tetx color based on bg

* refactor(hero-floating-layout): update naming

* feat(styles): add new estyling

* fix(hero): add default args

* feat(hero): add alignment for big screens for hero side

* fix(hero-infobox-desktop): remove alignment on floating variant

* fix(hero): add brackets

* docs(hero-layouts): remove extra comments

---------

--- a/_sass/components/homepage/_hero.scss
+++ b/_sass/components/homepage/_hero.scss
@@ -1,3 +1,5 @@
+@use "sass:map";
+
 .min-height-mobile {
   min-height: 398px;
 }
@@ -10,8 +12,84 @@
   padding: 3rem 1.5rem;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: map.get($breakpoints, "md")) {
   .hero-floating {
     padding: 3rem;
   }
+}
+
+// NOTE: This is to keep the infobox from exceeding
+// the width of the nav-bar.
+// Hence, any changes here or on nav-bar should be
+// duplicated to the other.
+.infobox-floating-container {
+  max-width: $container-max-width;
+  margin: 0 auto;
+}
+
+.hero-background-white {
+  .hero-text-color {
+    color: $content-base;
+  }
+  background-color: $canvas-base;
+}
+
+.hero-background-black {
+  .hero-text-color {
+    color: $content-inverse;
+  }
+  background-color: $canvas-inverse;
+}
+
+.hero-background-gray {
+  .hero-text-color {
+    color: $content-inverse;
+  }
+  background-color: $canvas-translucent-grey;
+}
+
+.hero-floating-sm {
+  width: 33%;
+}
+
+.hero-floating-md {
+  width: 50%;
+}
+
+.hero-alignment-left {
+  align-self: flex-end;
+}
+
+.hero-alignment-right {
+  align-self: flex-start;
+}
+
+@media screen and (min-width: map.get($breakpoints, "xl")) {
+  .hero-side-sm {
+    width: 50%;
+  }
+
+  .side-section-infobox-container {
+    width: 576px;
+  }
+
+  .side-section-container-left {
+    text-align: right;
+    align-self: flex-end;
+  }
+
+  .side-section-container-right {
+    text-align: left;
+    align-self: flex-start;
+  }
+}
+
+@media screen and (max-width: (map.get($breakpoints, "xl") - 1)) {
+  .hero-side-sm {
+    width: 33%;
+  }
+}
+
+.hero-side-md {
+  width: 50%;
 }
